# qoi-py

./: .pre-commit-config.yaml  pyproject.toml
scripts/: generate_decode_comparison.py
src/qoi_py/: __init__.py  _decode.py  _encode.py  _pixel.py  _structure.py  decode.py  encode.py  header.py  opcodes.py  pixel.py  types.py
tests/: test_decode.py  test_e2e.py  test_header.py  test_opcode.py
