[project]
name = "qoi-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HomerusJa", email = "jakob@schluse.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
