[project]
name = "qoi-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HomerusJa", email = "jakob@schluse.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pillow>=11.2.1",
    "pytest>=8.4.1",
    "pytest-sugar>=1.0.0",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
  "tests"
]
markers = [
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
